17 Jun 2014: Matthijs
	- Fix #587: Default value for statistics is 0.

5 Jun 2014: Wouter
	- Fix roundrobin cornercase for truncated packets.
	- round-robin: yesno in nsd.conf enabled round robin rotation.

28 May 2014: Wouter
	- Fix #585: yylex_destroy missing, cannot compile on RHEL 5.x.
	- Fix #583: Round-robin for records in the Answer section.

22 May 2014: Wouter
	- Fix zonefile parse with no whitespace before semicolon comments.

16 May 2014: Wouter
	- xfrd reaps children on a timer as well, similar to server_parent.

8 May 2014: Wouter
	- Fix #564: nsd-checkzone tool to check zonefile correctness.

7 May 2014: Wouter
	- Fix #577: makefile incorrectly installed manpages from srcdir.

30 April 2014: Wouter
	- Fix that xfrd reaps all children on every eventloop, because some
	  exited reloads may attach here and need reaping, also if the signal
	  is lost.

23 April 2014: Wouter
	- Fix progress printout for very large zones (numeric overflow).

10 April 2014: Wouter
	- Fix write_socket return value check in server.c (Thanks Brad Smith,
	  Mark Kettenis).

8 April 2014: Wouter
	- nsd-control addzone reports if zone already exists.

7 April 2014: Wouter
	- Fix #571: unused variable and incompatible pointer warnings when
	  compiled on a system without INET6.

27 March 2014: Wouter
	- Fix delete or rename of a lot of zones and make it take a
	  non-enormous time.  Database compaction is deferred.
	- Speed up deletion of zone contents a lot, (56s to 1s), speeds up
	  delete, rename and AXFR for zones.  Defer emptynonterminal checks.
	- Better example config in nsd.conf manual page.
	- log-time-ascii option, default yes, with readable timestamp in log.

25 March 2014: Wouter
	- nsd shuts down during init process if given signal.
	- shorter logging for zone transfer fail rcodes.

24 March 2014: Wouter
	- include: "foo/nsd.d/*.conf" works, wildcard glob on includes.
	- Fix print filename of encompassing config file on read failure.

21 March 2014: Wouter