@@ -1,5 +1,6 @@
 17 Jun 2014: Matthijs
 	- Fix #587: Default value for statistics is 0.
+	- remove shift-reduce conflicts from bug#553 fix.
 
 5 Jun 2014: Wouter
 	- Fix roundrobin cornercase for truncated packets.
